[gd_scene load_steps=31 format=3 uid="uid://cn0df6p1m8or6"]

[ext_resource type="Script" uid="uid://1qdt460u3kds" path="res://scenes/entities/unit/unit.gd" id="1_o7ajc"]
[ext_resource type="Texture2D" uid="uid://cqhff6g0xf6rj" path="res://scenes/entities/unit/knight.png" id="2_k673f"]
[ext_resource type="Script" uid="uid://d0lr6g68pv7ak" path="res://state_machine/state_machine.gd" id="3_p0kfm"]
[ext_resource type="Script" uid="uid://b1egw4egq1wg8" path="res://scenes/entities/unit/states/unit_follow.gd" id="4_h1r3i"]
[ext_resource type="Script" uid="uid://cgl1aieouu5o7" path="res://scenes/entities/unit/states/unit_rush.gd" id="5_6v3vn"]
[ext_resource type="Script" uid="uid://cdf8sjqwe34y2" path="res://scenes/entities/unit/states/unit_idle.gd" id="6_wi85q"]
[ext_resource type="Script" uid="uid://cvmieijb8lknv" path="res://scenes/entities/unit/states/unit_carry.gd" id="7_wi85q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k673f"]
atlas = ExtResource("2_k673f")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vpj5"]
atlas = ExtResource("2_k673f")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urede"]
atlas = ExtResource("2_k673f")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1eu01"]
atlas = ExtResource("2_k673f")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jvru"]
atlas = ExtResource("2_k673f")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gic7v"]
atlas = ExtResource("2_k673f")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb304"]
atlas = ExtResource("2_k673f")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruro2"]
atlas = ExtResource("2_k673f")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8hdl"]
atlas = ExtResource("2_k673f")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oee7j"]
atlas = ExtResource("2_k673f")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gdr1"]
atlas = ExtResource("2_k673f")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh01e"]
atlas = ExtResource("2_k673f")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0dep"]
atlas = ExtResource("2_k673f")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxc7x"]
atlas = ExtResource("2_k673f")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_omkap"]
atlas = ExtResource("2_k673f")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr2wx"]
atlas = ExtResource("2_k673f")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pi0r"]
atlas = ExtResource("2_k673f")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofq0c"]
atlas = ExtResource("2_k673f")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jta7"]
atlas = ExtResource("2_k673f")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhfok"]
atlas = ExtResource("2_k673f")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8vpj5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k673f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vpj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urede")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1eu01")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jvru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gic7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb304")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruro2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8hdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oee7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gdr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh01e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0dep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxc7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omkap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr2wx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pi0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofq0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jta7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhfok")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nnsk1"]
radius = 4.472136

[sub_resource type="CircleShape2D" id="CircleShape2D_p0kfm"]
radius = 71.02816

[node name="Unit" type="CharacterBody2D" groups=["targets", "units"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_o7ajc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8vpj5")
animation = &"move"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nnsk1")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_p0kfm")
starting_state = NodePath("Follow")

[node name="Follow" type="Node" parent="StateMachine" node_paths=PackedStringArray("rush_state", "idle_state")]
script = ExtResource("4_h1r3i")
rush_state = NodePath("../Rush")
idle_state = NodePath("../Idle")
animation_name = "move"

[node name="Rush" type="Node" parent="StateMachine"]
script = ExtResource("5_6v3vn")
animation_name = "move"

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("follow_state")]
script = ExtResource("6_wi85q")
follow_state = NodePath("../Follow")
animation_name = "idle"

[node name="Carry" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "follow_state")]
script = ExtResource("7_wi85q")
idle_state = NodePath("../Idle")
follow_state = NodePath("../Follow")
animation_name = "move"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." groups=["targets", "units"]]
target_desired_distance = 11.1
path_postprocessing = 1
avoidance_enabled = true
radius = 5.0
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 0, 1)

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_p0kfm")

[connection signal="velocity_computed" from="NavigationAgent2D" to="StateMachine/Follow" method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
